# luminous-ai-assistant

./: .gitignore  README.md
Luminous/: Luminous v2.html  Luminous.html
apps/: tsconfig.base.json
apps/api/: .env.example  .gitignore  INSTALL.md  pyproject.toml  requirements.txt
apps/api/src/: __init__.py  main.py
apps/api/src/api/endpoints/: chat.py  health.py  language.py  models.py  search.py  voice.py
apps/api/src/core/: __init__.py  config.py  logger.py
apps/api/src/services/: ai_service.py  connection_manager.py  language_service.py  model_switcher.py  ollama_service.py  stt_service.py  tts_service.py  web_search_service.py
apps/web/: .env.local.example  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
apps/web/public/: manifest.json  sw.js
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/hands-free/: page.tsx
apps/web/src/app/voice-translate/: page.tsx
apps/web/src/components/: boot-screen.tsx  hands-free-assistant.tsx  hud-sidebar.tsx  luminas-popup.tsx  nav-tabs.tsx  particle-background.tsx  theme-provider.tsx  top-bar.tsx  voice-overlay.tsx
apps/web/src/components/dashboard/: chat-interface.tsx  data-stream.tsx  status-card.tsx  system-monitor.tsx
apps/web/src/hooks/: useAutoTranslate.ts  useBackgroundVoice.ts  useTextToSpeech.ts  useVoiceRecognition.ts  useWakeWord.ts
apps/web/src/lib/: api.ts  utils.ts
docs/: FEATURES.md  HANDS_FREE_GUIDE.md  MODEL_ARCHITECTURE.md  PROJECT_STRUCTURE.md  SETUP.md  TECH_STACK.md  TH_EN_VOICE_GUIDE.md  USAGE_GUIDE.md
(+13 files in other folders)
