[project]
name = "luminous-api"
version = "1.0.0"
description = "Luminous Backend API - FastAPI"
authors = [
    {name = "Je", email = "je@luminous.ai"}
]
dependencies = [
    "fastapi>=0.115.6",
    "uvicorn[standard]>=0.32.1",
    "pydantic>=2.10.3",
    "pydantic-settings>=2.6.1",
    "anthropic>=0.45.1",
    "openai>=1.59.5",
    "python-multipart>=0.0.20",
    "python-dotenv>=1.0.1",
    "httpx>=0.28.1",
    "sqlalchemy>=2.0.36",
    "asyncpg>=0.30.0",
    "redis>=5.2.1",
    "chromadb>=0.6.3",
    "sentence-transformers>=3.3.1",
    "numpy>=2.2.1",
    "websockets>=14.1",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.24.0",
    "black>=24.10.0",
    "ruff>=0.8.4",
    "mypy>=1.14.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
